--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -6,7 +6,7 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">
                     Login</legend>
-            
+
                 <div class = "form-group">
                 {{ form.email.label(class = "form-control-label")}}
                 {% if form.email.errors%}
@@ -21,8 +21,8 @@
 
                 {% else %}
                     {{ form.email(class = "form-control  form-control-lg ")}}
-                {% endif %} 
-                </div>  
+                {% endif %}
+                </div>
                 <div class = "form-group">
                 {{ form.password.label(class = "form-control-label")}}
                 {% if form.password.errors%}
@@ -38,16 +38,16 @@
                 {% else %}
                     {{ form.password(class = "form-control  form-control-lg ")}}
                 {% endif %}
-                </div>  
+                </div>
                <div class="form-check">
                    {{ form.remember(class="form-check-input")}}
                    {{ form.remember.label(class="form-check-input-label ")}}
-               </div>      
+               </div>
             </fieldset>
             <div class = "form-group">
                 {{ form.submit(class="btn btn-outline-info")}}
             <small class= "text-muted">
-                <a href="{{ url_for('reset_request')}}">Forgot password?</a>
+                <a href="{{ url_for('users.reset_request')}}">Forgot password?</a>
             </small>
             </div>
 
@@ -55,11 +55,11 @@
             <div class="border-top pt-3">
         <small class="text-muted">
             Need an Account?
-            <a class="ml-2" href="{{ url_for('register')}}">Sign Up Now</a>
+            <a class="ml-2" href="{{ url_for('users.register')}}">Sign Up Now</a>
         </small>
-        
+
     </div>
-        
+
     </div>
 
 {% endblock content %}
