--- a/flaskblog/templates/reset_request.html
+++ b/flaskblog/templates/reset_request.html
@@ -4,33 +4,24 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">
-                    Reset Password</legend>
-            
-                <div class = "form-group">
-                {{ form.email.label(class = "form-control-label")}}
-                {% if form.email.errors%}
-                    {{ form.email(class = "form-control  form-control-lg ")}}
-                    <div class="invalid-feedback">
-                        {% for error in form.email.errors %}
-                            <span>
-                                {{error}}
-                            </span>
+                <legend class="border-bottom mb-4">Reset Password</legend>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
                             {% endfor %}
-                    </div>
-
-                {% else %}
-                    {{ form.email(class = "form-control  form-control-lg ")}}
-                {% endif %} 
-                </div>  
- 
-                  
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
             </fieldset>
-            <div class = "form-group">
-                {{ form.submit(class="btn btn-outline-info")}}
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
             </div>
-          
         </form>
     </div>
-
 {% endblock content %}
